[package]
name = "pikachu_matching"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.14", features = [
    "zstd",
  "animation",
  "bevy_asset",
  "bevy_audio",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_gilrs",
  "bevy_gizmos",
  "bevy_gltf",
  "bevy_pbr",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite",
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_winit",
  "default_font",
  "hdr",
  "multi_threaded",
  "png",
  "smaa_luts",
  "sysinfo_plugin",
  "tonemapping_luts",
  "vorbis",
  "webgl2",
  "x11",
] }   # Bevy 0.14 with PNG support

# Optional: web-sys / wasm-bindgen if you plan to compile to WASM
wasm-bindgen = "0.2"